.provarCaches/00Df2000001KKNJEA4/objects/FileLInk__External_File_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>FileLInk__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether a record has been soft deleted.</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FileLInk__External_File__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>External File</label>
        <referenceTo>FileLInk__External_File__c</referenceTo>
        <relationshipLabel>External File Relationships</relationshipLabel>
        <relationshipName>External_File_Relationships</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FileLInk__Object_ID__c</fullName>
        <label>Object ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileLInk__Object_Type__c</fullName>
        <label>Object Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FileLInk__Tags__c</fullName>
        <label>Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FileLInk__Filelink_Tags</valueSetName>
        </valueSet>
    </fields>
    <label>External File Relationship</label>
    <nameField>
        <label>External File Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External File Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>